--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,16 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.cifs"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
     }
     buildTypes {
         release {
@@ -32,5 +37,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/commons-vfs2-2.0.jar')
-    implementation files('libs/jcifs-1.3.18.1.jar')
+    implementation files('libs/jcifs-1.3.19.jar')
+    implementation 'com.jakewharton:butterknife:5.1.1'
+    implementation files('libs/commons-io-1.4.jar')
+    implementation files('libs/cybergarage-upnp-core-2.1.1.jar')
 }
