--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/commons-vfs2-2.0.jar')
-    implementation files('libs/jcifs-1.3.19.jar')
+    implementation files('libs/jcifs.jar')
     implementation 'com.jakewharton:butterknife:5.1.1'
     implementation files('libs/commons-io-1.4.jar')
     implementation files('libs/cybergarage-upnp-core-2.1.1.jar')
