视频播放和音频播放功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
         resolutionStrategy.force 'com.android.support:support-annotations:22.1.0'
     }
     implementation files('libs/pldroid-player-2.1.3.jar')
+    implementation project(':jsplayer')
 }
