视频播放和音频播放功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.VideoPlayerActivity"/>
+        <activity android:name=".activity.VideoPlayerActivity2"/>
     </application>
 
 </manifest>
